Fix time calculation, improve time plot

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "requests",
     "pandas",
     "tqdm",
-    "matplotlib"
+    "matplotlib",
+    "numpy",
+    "scipy",
 ]
 
 
